# copperbox

./: EventQueue.hs
bala/Bala/: Bala.hs  Base.hs  bala-core.cabal  bala.cabal
bala/Bala/Bala/: Base.hs  MusicRep.hs
bala/Bala/Bala/Base/: AffiDecoInstances.hs  BaseExtra.hs  Chord.hs  Contour.hs  DrumOutput.hs  DrumPitches.hs  Duration.hs  FocusedShapeContents.hs  Interval.hs  Meter.hs  Metrical.hs  MetricalEvent.hs  NamedElems.hs  OutputHNotate.hs  OutputMidi.hs  OutputMidi2.hs  Pitch.hs  PitchClass.hs  PitchConversion.hs  Printing.hs  Scale.hs  Structural.hs  Structural2.hs
bala/Bala/Bala/MusicRep/: Chord.hs  DrumsStyle.hs  GuitarNotation.hs  Interval.hs  Meter.hs  Motivic.hs  NamedElems.hs  PitchClass.hs  Pulse.hs  Scale.hs  TimbalesStyle.hs
bala/Bala/Base/: AffiDecoInstances.hs  Base.hs  BaseExtra.hs  Chord.hs  ChordSynonyms.hs  Duration.hs  HNotateInstances.hs  Interval.hs  Meter.hs  NamedElems.hs  Perform.hs  PerformInstances.hs  PerformPitch.hs  Pitch.hs  PitchClass.hs  PitchConversion.hs  PitchOps.hs  PitchRep.hs  Scale.hs  Unfiled.hs
bala/Bala/Format/: Midi.hs  Score.hs
bala/Bala/Format/Abc/: AbcFormat.hs  Conversion.hs  Datatypes.hs  Parser.hs  Pretty.hs
bala/Bala/Format/Ascii/: AsciiGuitar.hs  AsciiPiano.hs
bala/Bala/Format/Base/: SymBase.hs
bala/Bala/Format/JSON/: JSON.hs
bala/Bala/Format/LilyPond/: Datatypes.hs  LilyPond.hs  LilyPondOutput.hs  Parser.hs  Pretty.hs
bala/Bala/Format/Midi/: Datatypes.hs  GeneralMidiInstruments.hs  Midi.hs  MidiFile.hs  PerformMidi.hs  ReadFile.hs  ReadFileAlt.hs  SyntaxElements.hs  TextualMidi.hs  WriteFile.hs
bala/Bala/Format/Output/: AbcInternals.hs  LilyPondInternals.hs  LilyPondNamed.hs  OutputAbc.hs  OutputBase.hs  OutputLilyPond.hs
bala/Bala/Format/Score/: Class.hs  Datatypes.hs  PolyDatatypes.hs  Pretty.hs
bala/Bala/Format/SymAbc/: AbcFormat.hs  Datatypes.hs  DemoSymAbc.hs  Pretty.hs  SyntaxElements.hs
bala/Bala/Format/SymLilyPond/: Datatypes.hs  LilyPond.hs  Parser.hs  Pretty.hs  SyntaxElements.hs
bala/Bala/Perform/: AbcInternals.hs  BaseInstances.hs  EventTree.hs  LilyPondBackend.hs  LilyPondInternals.hs  Mergesort.hs  MidiInternals.hs  OriginalAbc.hs  OriginalLilyPond.hs  OriginalMidi.hs  Perform.hs  PerformAbc.hs  PerformBase.hs  PerformClass.hs  PerformLilyPond.hs  PerformMidi.hs  PerformOriginal.hs  PerformPitch.hs  RenderAbc.hs  RenderLilyPond.hs  RenderMidi.hs  RenderScore.hs
bala/Bala/Perform/Abc/: Abc.hs  AbcBackend.hs  AbcInterface.hs  AbcScoreDatatypes.hs  Class.hs  ToAbcScore.hs  Utils.hs
bala/Bala/Perform/Bala/: BalaAbc.hs  BalaLy.hs  BalaScore.hs
bala/Bala/Perform/Base/: Class.hs  Datatypes.hs  EventTree.hs  OnsetQueue.hs  PerformMonad.hs  Utils.hs
bala/Bala/Perform/LilyPond/: Class.hs  LilyPond.hs  LyBackend.hs  (+3 more)
bala/Bala/demo/: Afoxe.hs  Blues.hs  BossaNova.hs  RhythmExample.hs
bala/Bala/examples/: BossaNova.hs  ChaCha.hs  GuitarDemo.hs  MeterDemo.hs  MeterDemo2.hs  SambaBaiao.hs  ScaleDemo.hs
bala/Bala/tests/: ArbitraryInstances.hs  TestPitch.hs  TestPitchConversion.hs
bala/Bala/unfiled/: AsciiFingering.hs  AsciiGuitar.hs  AsciiPiano.hs  ChordFingerings.hs  ChordSynonyms.hs  PitchConversion.hs
bala/Bala2/: bala.cabal
bala/Bala2/demo/: Afoxe.hs  BossaNova.hs  RhythmExample.hs
bala/M2/: m2.cabal
bala/M2/demo/: Demo1.hs
bala/Mullein/: LICENSE  Mullein.cabal  mullein.cabal
bala/Mullein/demo/: B6.hs  Bulgarian6.hs  ChildSong6.lhs  Drums.hs  Examples.hs  NewResolutions.lhs  SariZeybek.hs  Ssf.hs  Ssf.lhs
bala/Mullein/temp/: Bulgarian6.hs  MulleinTemp.hs  NamedTemp.hs
bala/Mullein/test/: TestLabelSet.hs
bala/Neume/: neume.cabal
bala/Neume/demo/: ABC_B6.hs  B6.hs  BeamNew3.hs  Demo1.hs  GuitarChords.hs  GuitarTab.hs  Overlay1.hs  Percussion.hs
bala/ZMidi/: ZMidi.hs  zmidi.cabal
bala/ZMidi/ZMidi/: Construction.hs  Datatypes.hs  GeneralMidiInstruments.hs  Mergesort.hs  ReadFile.hs  ReadFileAlt.hs  SyntaxElements.hs  TextualMidi.hs  WriteFile.hs
bala/ZMidi/examples/: MidiPrint.hs  bulgarian6.mid
bala/ZMidi/src/: ZMidi.hs
bala/ZWav/: zwav.cabal
bala/ZWav/demo/: Demo01.hs  DemoIOArr.hs  DemoSyn01.hs
bala/fmss/: fmss.cabal
bala/fmss/demo/: Demo01.hs  FmBell.hs
bala/jerry-osc/: jerry-osc.cabal
bala/jerry-osc/demo/: Demo01.hs  UpdServer.hs  osc_updreceive.pd  osc_updsend.pd
bala/jerry-supercollider/: jerry-supercollider.cabal
bala/jerry-supercollider/demo/: DemoSc.hs
bala/majalan-basic/: majalan-basic.cabal
bala/majalan-basic/demo/: Xanadu.hs  xanadu3.orc
bala/majalan-core/: majalan-core.cabal  majalan.cabal
bala/majalan-core/demo/: Demo101.hs
bala/majalan-symbolic/: majalan-symbolic.cabal
bala/neume-core/: neume-core.cabal
bala/neume-core/demo/: B6.hs  Temp01.hs
bala/neume-extra/: neume-extra.cabal
bala/neume-extra/demo/: Bulgarian6.hs  GuitarChords.hs  GuitarTab.hs  Overlay01.hs  Percussion01.hs  Temp01.hs
bala/orchsyn/: orchsyn.cabal
bala/orchsyn/_working/: Code01.hs  Code02.hs  Code02Sym.hs  Code03.hs  Code03Sym.hs  Code04.hs  Code04Sym.hs  Code05.hs  Code05Sym.hs
bala/orchsyn/demo/: Demo01.hs
bala/pdss-core/: pdss-core.cabal
bala/pdss-core/demo/: Demo01.hs
bala/slac/: Setup.hs  slac.cabal
bala/slac/demo/: Demo01.hs
bala/tonos/: tonos.cabal
bala/tonos/demo/: Demo1.hs
bala/utt/: utt.cabal
bala/utt/demo/: Triadic.hs  UseNeume.hs
bala/zmidi-basic/: Setup.hs  zmidi-basic.cabal
bala/zmidi-basic/demo/: Demo01.hs  WasnRhythms.hs
bala/zmidi-construction/: CHANGES  Setup.hs  zmidi-construction.cabal
bala/zmidi-construction/demo/: Demo01.hs
bala/zmidi-core/: CHANGES  zmidi-core.cabal
bala/zmidi-core/demo/: MidiCopy.hs  MidiPrint.hs  MidiTune.hs  Test01.hs
bala/zmidi-emit/: Setup.hs  zmidi-emit.cabal
bala/zmidi-emit/demo/: Demo01.hs  Perc.hs  Scale.hs  VolumeChange.hs  WasnRhythms.hs
bala/zscore/: zscore.cabal
bala/zscore/demo/: Demo101.hs  Inst101.hs  Sco101.hs
bala/zscore/src/: ZScore.hs
bala/zsnd-basic/: zsnd-basic.cabal
bala/zsnd-basic/demo/: Xanadu.hs  XanaduInst.hs
bala/zsnd-core/: zsnd-core.cabal
bala/zsnd-core/demo/: Demo101.hs  NewInst.hs  NewPortSpec.hs  SimpleClick.hs
(+2572 files in other folders)
