name:             bala-core
version:          0.1.0
license:          BSD3
license-file:     LICENSE
copyright:        Stephen Tetley <stephen.tetley@gmail.com>
maintainer:       Stephen Tetley <stephen.tetley@gmail.com>
homepage:         http://code.google.com/p/copperbox/
category:         Music
synopsis:         Some music modules 
description:
  Some music modules. 
  .
  (c) 2009 Stephen Tetley

build-type:         Simple
stability:          highly unstable
cabal-version:      >= 1.2

extra-source-files:

library
  hs-source-dirs:     src
  build-depends:      base < 5, process, filepath, 
                      wl-pprint, containers, vector-space

  
  exposed-modules:
    Bala.Core.Chord,
    Bala.Core.Duration,
    Bala.Core.Interval,
    Bala.Core.Invert,
    Bala.Core.Modulo,
    Bala.Core.NamedIntervals,
    Bala.Core.NamedPitches,
    Bala.Core.Pitch,
    Bala.Core.PitchClass,
    Bala.Core.Scale,
    Bala.Core.Utils,

    Bala.ChordDiagram

  other-modules:
    
  extensions:
    

  ghc-options:  -Wall 
  
  includes: 
  

  
  
  