name:             bala
version:          0.1.0
license:          BSD3
license-file:     LICENSE
copyright:        Stephen Tetley <stephen.tetley@gmail.com>
maintainer:       Stephen Tetley <stephen.tetley@gmail.com>
homepage:         http://code.google.com/p/copperbox/
category:         Music
synopsis:         Some music modules 
description:
  Some music modules. 
  .
  (c) 2009 Stephen Tetley

build-type:         Simple
stability:          highly unstable
cabal-version:      >= 1.2

extra-source-files:
  src/Bala/BalaMullein.hs
  src/Bala/Mullien/Abc.hs
  src/Bala/Mullein/LilyPond.hs

library
  hs-source-dirs:     src
  build-depends:      base < 5, wl-pprint, containers, vector-space, 
                      QuickCheck < 2

  
  exposed-modules:
    Bala.BeatPattern,
    Bala.Chord,
    Bala.ChordDiagram,
    Bala.Duration,
    Bala.Interval,
    Bala.Invert,
    Bala.Modulo,
    Bala.NamedPitches,
    Bala.Pitch,
    Bala.PitchClass,
    Bala.RetroInt,
    Bala.Scale,
    Bala.SequenceManipulation,
    Bala.Utils
  other-modules:
    
  extensions:
    

  ghc-options:  -Wall 
  
  includes: 
  

  
  
  