name:             bala
version:          0.1.0
license:          BSD3
license-file:     LICENSE
copyright:        Stephen Tetley <stephen.tetley@gmail.com>
maintainer:       Stephen Tetley <stephen.tetley@gmail.com>
homepage:         http://code.google.com/p/copperbox/
category:         Music
synopsis:         Some music modules 
description:
  Some music modules. 
  .
  (c) 2009 Stephen Tetley

build-type:         Simple
stability:          highly unstable
cabal-version:      >= 1.2

extra-source-files:

library
  hs-source-dirs:     src
  build-depends:      base < 5, process, filepath, 
                      wl-pprint, containers, vector-space, 
                      QuickCheck < 2, mullein > 0.4, joinlist >= 0.1.0

  
  exposed-modules:
    Bala.BeatPattern,
    Bala.Chord,
    Bala.ChordDiagram,
    Bala.Duration,
    Bala.Interval,
    Bala.Invert,
    Bala.Modulo,
    Bala.Mullein,
    Bala.Mullein.Abc,
    Bala.Mullein.LilyPond,
    Bala.NamedPitches,
    Bala.Pitch,
    Bala.PitchClass,
    Bala.Scale,
    Bala.Structural,
    Bala.Utils
  other-modules:
    
  extensions:
    

  ghc-options:  -Wall 
  
  includes: 
  

  
  
  