name:             Mullein
version:          0.1
license:          BSD3
license-file:     LICENSE
copyright:        Stephen Tetley <stephen.tetley@gmail.com>
maintainer:       Stephen Tetley <stephen.tetley@gmail.com>
homepage:         http://code.google.com/p/copperbox/
category:         Music
synopsis:         Mullein
description:
  A post-processor for generating ABC or LilyPond from Haskore. 

build-type:         Simple
stability:          alpha
cabal-version:      >= 1.2

extra-source-files:
  README.txt,
  demo/Bulgarian6.hs,
  test/TestLabelSet.hs

library
  hs-source-dirs:     src
  build-depends:      base, wl-pprint, containers, mtl, dlist, haskore-vintage,
                      QuickCheck

  
  exposed-modules:
    Mullein.AbcConvert,
    Mullein.AbcDoc,
    Mullein.AbcNoteClass,
    Mullein.AbcOutput,
    Mullein.ArbitraryInstances,
    Mullein.Bracket,
    Mullein.Core,
    Mullein.Duration,
    Mullein.LilyPondConvert,
    Mullein.LilyPondDoc,
    Mullein.LilyPondNoteClass,
    Mullein.LilyPondOutput,
    Mullein.LilyPondPercussion,
    Mullein.NamedElements,
    Mullein.OutputCommon,
    Mullein.Pitch,
    Mullein.Score,
    Mullein.SpellingMap,
    Mullein.Utils,
    MulleinHaskore.Abc,
    MulleinHaskore.LilyPond,
    MulleinHaskore.Rewriting,
    MulleinHaskore.StringRewriting,
    MulleinHaskore.Translate
  other-modules:
    
  extensions:
    

  ghc-options:  -Wall 
  
  includes: 
  

  
  
  