name:             mullein
version:          0.4.0
license:          BSD3
license-file:     LICENSE
copyright:        Stephen Tetley <stephen.tetley@gmail.com>
maintainer:       Stephen Tetley <stephen.tetley@gmail.com>
homepage:         http://code.google.com/p/copperbox/
category:         Music
synopsis:         A library for generating LilyPond and ABC scores. 
description:
  Mullein is a library for generating ABC and LilyPond scores. 
  It aims to generate /good/ quality scores - that's to say the 
  output should resemble hand-written scores. 
  .
  (c) 2009 Stephen Tetley

build-type:         Simple
stability:          highly unstable
cabal-version:      >= 1.2

extra-source-files:
  demo/Examples.hs


library
  hs-source-dirs:     src
  build-depends:      base < 5, wl-pprint, containers, dlist, QuickCheck,
                      monadLib

  
  exposed-modules:
    Mullein.Abc,
    Mullein.AbcDoc,
    Mullein.AbcOutput,
    Mullein.Bracket,
    Mullein.Core,
    Mullein.Duration,
    Mullein.Extended,
    Mullein.LilyPond,
    Mullein.LilyPondDoc,
    Mullein.LilyPondOutput,
    Mullein.NamedElements,
    Mullein.Pitch,
    Mullein.Utils
  other-modules:
    
  extensions:
    

  ghc-options:  -Wall 
  
  includes: 
  

  
  
  