name:             neume
version:          0.1.0
license:          BSD3
license-file:     LICENSE
copyright:        Stephen Tetley 2010
maintainer:       Stephen Tetley <stephen.tetley@gmail.com>
homepage:         http://code.google.com/p/copperbox/
category:         Music
synopsis:         A library for generating LilyPond and ABC scores. 
description:
  Neume is a library for generating ABC and LilyPond scores. 
  It aims to generate /good/ quality scores - that's to say the 
  output should resemble hand-written scores. 
  .
  (c) 2010 Stephen Tetley

build-type:         Simple
stability:          highly unstable
cabal-version:      >= 1.2

extra-source-files:
  demo/B6.hs


library
  hs-source-dirs:     src
  build-depends:      base < 5, 
                      containers, 
                      wl-pprint,
                      algebra,
                      monadLib,
                      joinlist >= 0.3.0
                     
  
  exposed-modules:
    Neume.Core.AbcBasic,
    Neume.Core.AbcOutput,
    Neume.Core.BeamExtremity,
    Neume.Core.Bracket,
    Neume.Core.BracketMarkup,
    Neume.Core.Datatypes,
    Neume.Core.Duration,
    Neume.Core.LilyPondBasic,
    Neume.Core.LilyPondOutput,
    Neume.Core.Pitch,
    Neume.Core.SyntaxMarkup,
    Neume.Core.SyntaxScore,
    Neume.Core.SyntaxStaff,
    Neume.Core.TreeOps,
    Neume.Core.Utils,
    Neume.Core.Utils.Common,
    Neume.Core.Utils.FunctorN,
    Neume.Core.Utils.OneList,
    Neume.Core.Utils.Pretty,
    Neume.Core.Utils.StateMap,

    Neume.Extra.AbcDoc,
    Neume.Extra.AbcFormat,
    Neume.Extra.DrumPitches,
    Neume.Extra.Extended,
    Neume.Extra.FretDiagrams,
    Neume.Extra.LilyPondDoc,
    Neume.Extra.LilyPondFormat,
    Neume.Extra.NamedElements

  other-modules:
    
  extensions:
    

  ghc-options:  -Wall 
  
  includes: 
  

  
  
  