name:             neume
version:          0.3.0
license:          BSD3
license-file:     LICENSE
copyright:        Stephen Tetley 2010
maintainer:       Stephen Tetley <stephen.tetley@gmail.com>
homepage:         http://code.google.com/p/copperbox/
category:         Music
synopsis:         A library for generating LilyPond and ABC scores. 
description:
  Neume is a library for generating ABC and LilyPond scores. 
  It aims to generate /good/ quality scores - that's to say the 
  output should resemble hand-written scores. 
  .
  (c) 2010 Stephen Tetley

build-type:         Simple
stability:          highly unstable
cabal-version:      >= 1.2

extra-source-files:
  demo/B6.hs, 
  demo/GuitarChords.hs,
  demo/GuitarTab.hs,
  demo/Percussion.hs,
  demo/Overlay1.hs


library
  hs-source-dirs:     src
  build-depends:      base < 5, 
                      containers, 
                      wl-pprint,
                      algebra

  exposed-modules:
    Neume.Core.AbcBasic,
    Neume.Core.AbcFormat,
    Neume.Core.AbcOutput,
    Neume.Core.Bracket,
    Neume.Core.Duration,
    Neume.Core.LilyPondBasic,
    Neume.Core.LilyPondFormat,
    Neume.Core.LilyPondOutput,
    Neume.Core.Metrical,
    Neume.Core.Pitch,
    Neume.Core.SpellingMap,
    Neume.Core.SyntaxGlyph,
    Neume.Core.SyntaxInterim,
    Neume.Core.SyntaxNoteList,
    Neume.Core.SyntaxScore,
    Neume.Core.Utils,
    Neume.Core.Utils.Arity,
    Neume.Core.Utils.Common,
    Neume.Core.Utils.FunctorN,
    Neume.Core.Utils.HList,
    Neume.Core.Utils.OneList,
    Neume.Core.Utils.Pretty,
    Neume.Core.Utils.SpecialTraversals,
    Neume.Core.Utils.StateMap,

    Neume.Extra.AbcDoc,
    Neume.Extra.DrumPitches,
    Neume.Extra.Extended,
    Neume.Extra.FretDiagrams,
    Neume.Extra.LilyPondDoc,
    Neume.Extra.NamedElements,
    Neume.Extra.Percussion

  other-modules:
    
  extensions:
    

  ghc-options:  -Wall 
  
  includes: 
  

  
  
  