name:             zmidi
version:          0.1.0
license:          BSD3
license-file:     LICENSE
copyright:        Stephen Tetley <stephen.tetley@gmail.com>
maintainer:       Stephen Tetley <stephen.tetley@gmail.com>
homepage:         http://code.google.com/p/copperbox/
category:         Music
synopsis:         MIDI files...
description:
  Read MIDI files...
  .

build-type:         Simple
stability:          half baked
cabal-version:      >= 1.2

extra-source-files:
  demo/MidiPrint.hs


library
  hs-source-dirs:     src
  build-depends:      base < 5,
                      containers,
                      mtl,
                      bytestring,
                      kangaroo >= 0.3.0 && < 0.4

  
  exposed-modules:
    ZMidi,
    ZMidi.Construction,
    ZMidi.Datatypes,
    ZMidi.GeneralMidiInstruments,
    ZMidi.MergeSort,
    ZMidi.ReadFile,
    ZMidi.TextualMidi,
    ZMidi.Utils,
    ZMidi.WriteFile

  other-modules:
      
  extensions:
    

  ghc-options:
  
  includes: 
  

  
  
