name:             zwav
version:          0.1.0
license:          BSD3
license-file:     LICENSE
copyright:        Stephen Tetley <stephen.tetley@gmail.com>
maintainer:       Stephen Tetley <stephen.tetley@gmail.com>
homepage:         http://code.google.com/p/copperbox/
category:         Music
synopsis:         WAV files...
description:
  Read WAV files...
  .
  (c) Stephen Tetley 2010
  .

build-type:         Simple
stability:          half baked
cabal-version:      >= 1.2

extra-source-files:
  demo/Demo01.hs


library
  hs-source-dirs:     src
  build-depends:      base              < 5,
                      containers,
                      bytestring,
                      binary            >= 0.5

  
  exposed-modules:
    ZWav.Datatypes,
    ZWav.ReadFile,
    ZWav.WriteFile

  other-modules:
      
  extensions:
    

  ghc-options:
  
  includes: 
  

  
  
