name:             majalan-core
version:          0.1.0
license:          BSD3
license-file:     LICENSE
copyright:        Stephen Tetley <stephen.tetley@gmail.com>
maintainer:       Stephen Tetley <stephen.tetley@gmail.com>
homepage:         http://code.google.com/p/copperbox/
category:         Music
synopsis:         Generate Csound scores
description:
  Generate Csound scores.
  . 
  The embedding is somewhat trivial...
  .
  (c) Stephen Tetley 2011
  .

build-type:         Simple
stability:          half baked
cabal-version:      >= 1.2

extra-source-files:
  demo/Demo101.hs


library
  hs-source-dirs:     src
  build-depends:      base              <  5,
                      containers        >= 0.3      && <= 0.6,
                      pretty            < 1.2

  exposed-modules:
    Majalan.Core,
    Majalan.Core.GenRoutines,
    Majalan.Core.OutputCsound,
    Majalan.Core.Score

  other-modules:
    Majalan.Core.Internal.CSDDoc,
    Majalan.Core.Internal.PrettyExtras
      
  extensions:
    

  ghc-options:
  
  includes: 
  

  
  
