name:             pdss-core
version:          0.1.0
license:          BSD3
license-file:     LICENSE
copyright:        Stephen Tetley <stephen.tetley@gmail.com>
maintainer:       Stephen Tetley <stephen.tetley@gmail.com>
homepage:         http://code.google.com/p/copperbox/
category:         Music
synopsis:         Generate Pure Data patches.
description:
  Generate Pure Data patches.
  .
  (c) Stephen Tetley 2011
  .

build-type:         Simple
stability:          half baked
cabal-version:      >= 1.2

extra-source-files:
  demo/Demo101.hs


library
  hs-source-dirs:     src
  build-depends:      base              <  5,
                      sized-types       >= 3.4 && < 4.0

  exposed-modules:
    PDSS.Core.BoundingBox,
    PDSS.Core.Colour,
    PDSS.Core.Context,
    PDSS.Core.Monad,
    PDSS.Core.ObjectBasis,
    PDSS.Core.Objects,
    PDSS.Core.Objects.Glue,
    PDSS.Core.Objects.Math,
    PDSS.Core.Types
 
  other-modules:
    PDSS.Core.InternalTypes,
    PDSS.Core.PdDoc,
    PDSS.Core.Utils.Common,
    PDSS.Core.Utils.FormatCombinators,
    PDSS.Core.Utils.HList

  extensions:
    

  ghc-options:
  
  includes: 
  

  
  
