name:             slac
version:          0.1.0
license:          BSD3
license-file:     LICENSE
copyright:        Stephen Tetley <stephen.tetley@gmail.com>
maintainer:       Stephen Tetley <stephen.tetley@gmail.com>
homepage:         http://code.google.com/p/copperbox/
category:         Sound
synopsis:         Interface to Supercollider.
description:
  .
  Interface to Supercollider.
  .
build-type:         Simple
stability:          unstable
cabal-version:      >= 1.2

extra-source-files:
  CHANGES,
  demo/Demo01.hs


library
  hs-source-dirs:     src
  build-depends:      base < 5,
                      bytestring,
                      binary >= 0.5, 
                      wl-pprint 
  
  exposed-modules:
    Sound.Slac.Supercollider.SynthDef,
    Sound.Slac.Supercollider.SynthDef.Datatypes,
    Sound.Slac.Supercollider.SynthDef.Pretty,
    Sound.Slac.Supercollider.SynthDef.ReadFile,
    Sound.Slac.Supercollider.SynthDef.WriteFile,
    Sound.Slac.VersionNumber

  other-modules:
    Sound.Slac.Supercollider.SynthDef.Internal.IEEE754,
    Sound.Slac.Supercollider.SynthDef.Internal.ParserMonad,
      
  extensions:
    

  ghc-options:
  
  includes: 
  

  
  
